@@ -3,6 +3,7 @@ This this the changelog file for the Pothos GUI toolkit.
 Release 0.2.1 (pending)
 ==========================
 
+- Fix duplicate ID bug than can occur during handle paste
 - Fix enable handler for redundant events and widget objects
 - Skip rotation event when no graph objects are selected
 - Fixed handling of disabled block with property errors
